# Darts-Applications

./: Criket.py  Dockerfile  Makefile  README.md  default.conf  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/templates/: countup.html  index.html  layout.html
web/: Dockerfile  default.conf
