[tool.poetry]
name = "nginx_darts_app"
version = "0.1.0"
description = ""
authors = ["takumiw"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^21.4b2"
mypy = "^0.812"
isort = "^5.8.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"